--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -25,7 +25,6 @@ body {
   height: 80vh;
   width: 100%;
   border-radius: 0.5rem;
-  background-image: url(images/0.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -47,7 +46,7 @@ body {
 input[type="radio"] {
   display: none;
 }
-input[type="radio"] + label {
+label {
   display: inline-block;
   width: 1.5rem;
   height: 3rem;
@@ -56,10 +55,10 @@ input[type="radio"] + label {
   align-items: flex-start;
   cursor: pointer;
 }
-input[type="radio"] + label:hover {
+label:hover {
   --control_color: #fff;
 }
-input[type="radio"] + label:active .check{
+label:active .check{
   opacity: 0.8;
 }
 .check {
@@ -70,6 +69,45 @@ input[type="radio"] + label:active .check{
   border: 0.15rem solid var(--control_color);
   pointer-events: none;
 }
-input:checked + label .check {
+#slide1:checked ~ .slider .slider_footer .footer_controls ul li:nth-of-type(1) label .check ,
+#slide2:checked ~ .slider .slider_footer .footer_controls ul li:nth-of-type(2) label .check ,
+#slide3:checked ~ .slider .slider_footer .footer_controls ul li:nth-of-type(3) label .check ,
+#slide4:checked ~ .slider .slider_footer .footer_controls ul li:nth-of-type(4) label .check ,
+#slide5:checked ~ .slider .slider_footer .footer_controls ul li:nth-of-type(5) label .check {
   background: transparent;
+}
+#slide1:checked ~ .slider .slider_main {
+  background-image: url(images/0.jpg);
+}
+#slide2:checked ~ .slider .slider_main {
+  background-image: url(images/1.jpg);
+}
+#slide3:checked ~ .slider .slider_main {
+  background-image: url(images/2.jpg);
+}
+#slide4:checked ~ .slider .slider_main {
+  background-image: url(images/3.jpg);
+}
+#slide5:checked ~ .slider .slider_main {
+  background-image: url(images/4.jpg);
+}
+p {
+  display: none;
+}
+#slide1:checked ~ .slider .slider_footer .footer_text p:nth-of-type(1),
+#slide2:checked ~ .slider .slider_footer .footer_text p:nth-of-type(2),
+#slide3:checked ~ .slider .slider_footer .footer_text p:nth-of-type(3),
+#slide4:checked ~ .slider .slider_footer .footer_text p:nth-of-type(4),
+#slide5:checked ~ .slider .slider_footer .footer_text p:nth-of-type(5){
+  display: inline-block;
+  position: relative;
+  animation: show 0.5s ease-in;
+}
+@keyframes show {
+  0% {
+    left: 2rem;
+  }
+  100% {
+    left: 0;
+  }
 }
